app/globals.css
@import "tailwindcss";
@import "leaflet/dist/leaflet.css";
@import "leaflet-defaulticon-compatibility/dist/leaflet-defaulticon-compatibility.css";
@import "leaflet-defaulticon-compatibility";

@theme inline {
  --color-background: var(--background);
  --color-backgroundlight: var(--backgroundlight);
  --color-field: var(--field);
  --color-foreground: var(--foreground);
  --color-primary: var(--primary);
  --color-secondary: var(--secondary);
  --color-txt: var(--text);
  --color-good: var(--good);
  --color-bad: var(--bad);
  --color-badmed: #c04d47;
  --font-sans: var(--font-coming-soon);
}

@theme {
  --note-menu-x-size: 2.5rem;
  --note-menu-title-gap: 0.25rem;
  --cate-edit-x-size: 1.5rem;
}

@media (prefers-color-scheme: light) {
  :root {
    --text: #69553b;
    --foreground: #69553b;
    --background: #e1d3c1;
    --backgroundlight: #f9f4ec;
    --field: #f3e9db;
    --primary: #30cb5f;
    --secondary: #57ea83;
    --good: #2dad53;
    --bad: #f26868;
  }
}

/* force light mode to align with image backgrounds */
@media (prefers-color-scheme: dark) {
  :root {
    --text: #69553b;
    --foreground: #69553b;
    --background: #e1d3c1;
    --backgroundlight: #f9f4ec;
    --field: #f3e9db;
    --primary: #30cb5f;
    --secondary: #57ea83;
    --good: #2dad53;
    --bad: #f26868;
  }
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --text: #f9f4ec;
    --foreground: #b8a48b;
    --background: #2e2a28;
    --backgroundlight: #534c48;
    --field: #f3e9db;
    --primary: #15a841;
    --secondary: #0b4c0b;
    --good: #57ea83;
    --bad: #f26868;
  }
} */

body {
  background: var(--background);
  color: var(--foreground);
  font-family: 'Coming Soon';
  font-weight: 400;
}

h1, h2, h3, h4, h5 {
  font-family: 'Dangrek';
  font-weight: 700;
}

div, p {
  font-family: 'Coming Soon';
}

textarea {
  field-sizing: content;
}

button {
  cursor: pointer;
}

.geojournal-text {
  font-family: 'Dangrek';
}

/* for dropdowns */
.dropdown-button {
  anchor-name: --owner;
  position: relative;
}

.dropdown-anchoring {
  position-anchor: --owner;
  position: absolute;
  top: anchor(bottom);
  left: anchor(left);
}

/* leaflet component stylings */

.leaflet-container {
  height: 100%;
  width: 100%;
  z-index: 0;
}

.leaflet-popup-content-wrapper {
  background-color: var(--background);
}

.leaflet-popup-tip {
  background-color: var(--background);
}

/* for note menu */
.note-menu-title-gap {
  gap: var(--note-menu-title-gap);
}

.note-menu-x-size {
  width: clamp(var(--note-menu-x-size), var(--note-menu-x-size), var(--note-menu-x-size));
  height: clamp(var(--note-menu-x-size), var(--note-menu-x-size), var(--note-menu-x-size));
}

.note-menu-title-grow {
  width: calc(100% - var(--note-menu-x-size) - var(--note-menu-title-gap));
  max-width: calc(100% - var(--note-menu-x-size) - var(--note-menu-title-gap));
}

/* for category-editor */
.cate-edit-x-size {
  width: clamp(var(--cate-edit-x-size), var(--cate-edit-x-size), var(--cate-edit-x-size));
  height: clamp(var(--cate-edit-x-size), var(--cate-edit-x-size), var(--cate-edit-x-size));
}
.ease-reciprocal {
  transition-timing-function: cubic-bezier(1,0,1,0);
}

[type=checkbox] {
  appearance: none;
}

/* loading rocking animation */
@keyframes rocking {
  0% { transform: rotate(-5deg); }
  50% { transform: rotate(5deg); }
  100% { transform: rotate(-5deg); }
}

.loading-msg {
  max-width: 80vw;
  max-height: 80vh;
  background-color: var(--background);
  border: 8px solid var(--foreground);
  border-radius: var(--radius-4xl);
  padding-inline: 2rem;
  padding-block: 1rem;
  display: inline-block;
  animation: rocking 2s ease-in-out infinite;
}

/* scrollbars */
.fg-scrollbar {
  scrollbar-width: thin;
  scrollbar-color: var(--color-foreground) transparent; /* thumb color track color */
  overflow-y: scroll; /* Ensures the element is scrollable */
}

.hidden-scrollbar::-webkit-scrollbar {
  display: none;
}
.hidden-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

/* width */
::-webkit-scrollbar {
  width: 10px;
  height: 10px;
  border-radius: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.1);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--color-foreground);
  border-radius: 5px;
}

/* Arrows */
::-webkit-scrollbar-button {
    display: none;
}

html {font-size: 100%;} /* 16px */

h1 {font-size: 4.210rem; /* 67.36px */}

h2 {font-size: 3.158rem; /* 50.56px */}

h3 {font-size: 2.369rem; /* 37.92px */}

h4 {font-size: 1.777rem; /* 28.48px */}

h5 {font-size: 1.333rem; /* 21.28px */}

small {font-size: 0.750rem; /* 12px */}

@utility input-field {
  outline: 3px solid var(--foreground);
  border-radius: var(--radius-lg);
  background-color: var(--field);
  align-items: center;
  padding: calc(var(--spacing) * 2);
}

@utility category-card {
  outline: 2px solid var(--foreground);
  border-radius: var(--radius-2xl);
  background-color: var(--field);
  align-items: center;
  padding: calc(var(--spacing) * 1);
}

@utility contrast-text {
  color: var(--color-neutral-900);
  /* @media (prefers-color-scheme: dark) {
    color: #f3e9db;
  } */
}

@utility fit-pill-button {
  align-items: center;
  justify-content: center;
  padding-inline: calc(var(--spacing) * 2);
  padding-block: calc(var(--spacing) * 1);
  border-radius: calc(infinity * 1px);
  
}

@utility dropdown-triangle {
  width: 0;
  height: 0;
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  border-bottom: 0.5rem solid var(--color-foreground);
}

@utility bg-border-frame {
  background-color: var(--background);
  outline: 2px solid var(--foreground);

  &:hover {
      @media (hover: hover) {
          background-color: var(--backgroundlight);
      }
  }
}

